--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="9"
-    android:orientation="vertical"
     android:background="@drawable/background_bg"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Users"
-                android:textSize="16sp"
                 android:textColor="@color/colorWhite"
-                android:layout_gravity="center"/>
+                android:textSize="16sp" />
         </android.support.v7.widget.Toolbar>
     </LinearLayout>
-    
+
     <LinearLayout
-        android:layout_weight="8"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="8"
+        android:background="@drawable/recyclerview_bg"
         android:padding="10dp">
+
     </LinearLayout>
 
 </LinearLayout>
