--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/seach_view"
+    <item android:id="@+id/search_view"
         android:title="Search"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="ifRoom"
