Adding a style named toolbar and  Implementing it in activity_main.xml

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="colorControlNormal">@color/colorWhite</item>
     </style>
 
+<!--    These styles belong to the toolbar-->
+    <style name="Toolbar">
+        <item name="editTextColor">@color/colorWhite</item>
+    </style>
 </resources>
