Changing the colour of the edit text in the Toolbar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,6 @@
 
 <!--    These styles belong to the toolbar-->
     <style name="Toolbar">
-        <item name="editTextColor">@color/colorWhite</item>
+        <item name="android:editTextColor">@color/colorWhite</item>
     </style>
 </resources>
